# razter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
include/razter/: razter.h
src/razter/: CMakeLists.txt  glad.c  razter-dx.c  razter-gl.c  razter-mtl.m  razter-vk.c  razter.c
src/razter-Test/: CMakeLists.txt  main.c
src/razter-Test/res/: shader-frag.spv  shader-vert.spv  shader-vk.frag  shader-vk.vert  shader.frag  shader.metal  shader.vert
